--- a/src/CtrlMoney.CrossCutting.Ioc/CtrlMoney.CrossCutting.Ioc.csproj
+++ b/src/CtrlMoney.CrossCutting.Ioc/CtrlMoney.CrossCutting.Ioc.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CtrlMoney.Infra.Repository\CtrlMoney.Infra.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
